RESOLVED FIXED70166
Trivial fix for a missing change in r97512
https://bugs.webkit.org/show_bug.cgi?id=70166
Summary Trivial fix for a missing change in r97512
Yuqiang Xian
Reported 2011-10-14 18:51:38 PDT
It breaks DFG 32_64.
Attachments
the patch (1.44 KB, patch)
2011-10-14 18:54 PDT, Yuqiang Xian
no flags
Yuqiang Xian
Comment 1 2011-10-14 18:54:39 PDT
Created attachment 111120 [details] the patch
WebKit Review Bot
Comment 2 2011-10-15 00:58:36 PDT
Comment on attachment 111120 [details] the patch Clearing flags on attachment: 111120 Committed r97552: <http://trac.webkit.org/changeset/97552>
WebKit Review Bot
Comment 3 2011-10-15 00:58:40 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.