Trivial fix for a missing change in r97512 https://bugs.webkit.org/show_bug.cgi?id=70166

Patch by Yuqiang Xian <yuqiang.xian@intel.com> on 2011-10-15
Reviewed by Gavin Barraclough.

* dfg/DFGJITCompiler32_64.cpp:
(JSC::DFG::JITCompiler::link):

Canonical link: https://commits.webkit.org/86280@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97552 268f45cc-cd09-0410-ab3c-d52691b4dbfc